# znake

./: .gitignore  CMakeLists.txt  README.md
src/: food.cpp  food.h  grid.cpp  grid.h  main.cpp  main.h  snake.cpp  snake.h  walls.cpp  walls.h
